--- a/dependency-convergence.html
+++ b/dependency-convergence.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>Phone Bill Web/REST Project - Reactor Dependency Convergence</title>
+    <title>student - Reactor Dependency Convergence</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                Phone Bill Web/REST Project
+                student
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-05-19</span>
                   &nbsp;| <span id="projectVersion">Version: 1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="Phone Bill Web/REST Project">Phone Bill Web/REST Project</a>
+            <div class="xright">                    <a href="./" title="student">student</a>
               
                     
       </div>
@@ -50,21 +50,9 @@
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                                <li class="expanded">
+                                                                                                                                                                                                                                                                                                                        <li class="expanded">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                     <ul>
-                      <li class="none">
-                          <a href="dependencies.html" title="Dependencies">Dependencies</a>
-            </li>
-                      <li class="none">
-            <strong>Dependency Convergence</strong>
-          </li>
-                      <li class="none">
-                          <a href="dependency-info.html" title="Dependency Information">Dependency Information</a>
-            </li>
-                      <li class="none">
-                          <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
-            </li>
                       <li class="none">
                           <a href="index.html" title="About">About</a>
             </li>
@@ -72,19 +60,46 @@
                           <a href="plugin-management.html" title="Plugin Management">Plugin Management</a>
             </li>
                       <li class="none">
+                          <a href="distribution-management.html" title="Distribution Management">Distribution Management</a>
+            </li>
+                      <li class="none">
+                          <a href="dependency-info.html" title="Dependency Information">Dependency Information</a>
+            </li>
+                      <li class="none">
+            <strong>Dependency Convergence</strong>
+          </li>
+                      <li class="none">
+                          <a href="source-repository.html" title="Source Repository">Source Repository</a>
+            </li>
+                      <li class="none">
+                          <a href="mail-lists.html" title="Mailing Lists">Mailing Lists</a>
+            </li>
+                      <li class="none">
+                          <a href="issue-tracking.html" title="Issue Tracking">Issue Tracking</a>
+            </li>
+                      <li class="none">
+                          <a href="integration.html" title="Continuous Integration">Continuous Integration</a>
+            </li>
+                      <li class="none">
                           <a href="plugins.html" title="Project Plugins">Project Plugins</a>
+            </li>
+                      <li class="none">
+                          <a href="license.html" title="Project License">Project License</a>
             </li>
                       <li class="none">
                           <a href="team-list.html" title="Project Team">Project Team</a>
             </li>
                       <li class="none">
-                          <a href="source-repository.html" title="Source Repository">Source Repository</a>
+                          <a href="project-summary.html" title="Project Summary">Project Summary</a>
             </li>
                       <li class="none">
-                          <a href="project-summary.html" title="Project Summary">Project Summary</a>
+                          <a href="dependencies.html" title="Dependencies">Dependencies</a>
             </li>
               </ul>
         </li>
+                                                                                                                                                              <li class="collapsed">
+                          <a href="project-reports.html" title="Project Reports">Project Reports</a>
+                  </li>
           </ul>
                              <a href="http://maven.apache.org/" title="Built by Maven" class="poweredBy">
         <img class="poweredBy" alt="Built by Maven" src="./images/logos/maven-feather.png" />
@@ -101,34 +116,153 @@
   <b>Legend:</b>
 </caption>
 <tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>All projects share one version of the dependency.</td></tr>
+<tr class="b">
 <td><img alt="error" src="images/icon_error_sml.gif" /></td>
-<td>At least one dependency has a differing version of the dependency or has SNAPSHOT dependencies.</td></tr></table><br />
+<td>At least one project has a differing version of the dependency.</td></tr></table><br />
 <table border="0" class="bodyTable"><caption>
   <b>Statistics:</b>
 </caption>
-<tr class="b">
-<th>Number of modules:</th>
+<tr class="a">
+<th>Number of sub-projects:</th>
 <td>6</td></tr>
-<tr class="a">
-<th>Number of dependencies (NOD):</th>
-<td>16</td></tr>
 <tr class="b">
-<th>Number of unique artifacts (NOA):</th>
-<td>16</td></tr>
+<th>Number of dependencies (NOD):</th>
+<td>9</td></tr>
 <tr class="a">
-<th>Number of version-conflicting artifacts (NOC):</th>
-<td>0</td></tr>
+<th>Number of unique artifacts (NOA):</th>
+<td>9</td></tr>
 <tr class="b">
 <th>Number of SNAPSHOT artifacts (NOS):</th>
 <td>0</td></tr>
 <tr class="a">
 <th>Convergence (NOD/NOA):</th>
-<td><img alt="success" src="images/icon_success_sml.gif" />&#160;<b>100 %</b></td></tr>
+<td><img alt="success" src="images/icon_success_sml.gif" />&#160;<b>100%</b></td></tr>
 <tr class="b">
-<th>Ready for release (100 % convergence and no SNAPSHOTS):</th>
+<th>Ready for Release (100% Convergence and no SNAPSHOTS):</th>
 <td><img alt="success" src="images/icon_success_sml.gif" />&#160;<b>Success</b></td></tr></table></div>
 <div class="section">
-<h3>Dependencies used in modules<a name="Dependencies_used_in_modules"></a></h3></div>
+<h3>Dependencies used in sub-projects<a name="Dependencies_used_in_sub-projects"></a></h3>
+<div class="section">
+<h4>com.google.guava:guava<a name="com.google.guava:guava"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">16.0.1</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://www.cs.pdx.edu/~whitlock">edu.pdx.cs410J.minesweeper:minesweeper-kata</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>com.sandwich:koans-lib<a name="com.sandwich:koans-lib"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">Summer2014</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="https://github.com/DavidWhitlock/java-koans">edu.pdx.cs410J.whitlock:koans</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>edu.pdx.cs410J:examples<a name="edu.pdx.cs410J:examples"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">Summer2015</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://maven.apache.org">edu.pdx.cs410J.whitlock:phonebill</a></li>
+<li><a class="externalLink" href="http://www.cs.pdx.edu">edu.pdx.cs410J.whitlock:student</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>edu.pdx.cs410J:projects<a name="edu.pdx.cs410J:projects"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">Summer2015</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://www.cs.pdx.edu/~whitlock">edu.pdx.cs410J.kata:KataNumbersInWords</a></li>
+<li><a class="externalLink" href="http://www.cs.pdx.edu/~whitlock">edu.pdx.cs410J.kata:KataNumbersInWords</a></li>
+<li><a class="externalLink" href="http://www.cs.pdx.edu/~whitlock">edu.pdx.cs410J.minesweeper:minesweeper-kata</a></li>
+<li><a class="externalLink" href="http://www.cs.pdx.edu/~whitlock">edu.pdx.cs410J.minesweeper:minesweeper-kata</a></li>
+<li><a class="externalLink" href="http://maven.apache.org">edu.pdx.cs410J.whitlock:phonebill</a></li>
+<li><a class="externalLink" href="http://maven.apache.org">edu.pdx.cs410J.whitlock:phonebill</a></li>
+<li><a class="externalLink" href="http://www.cs.pdx.edu">edu.pdx.cs410J.whitlock:student</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>javax.servlet:servlet-api<a name="javax.servlet:servlet-api"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">3.0-alpha-1</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://maven.apache.org">edu.pdx.cs410J.whitlock:phonebill</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>junit:junit<a name="junit:junit"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">4.12</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://www.cs.pdx.edu/~whitlock">edu.pdx.cs410J.kata:KataNumbersInWords</a></li>
+<li><a class="externalLink" href="http://www.cs.pdx.edu/~whitlock">edu.pdx.cs410J.minesweeper:minesweeper-kata</a></li>
+<li><a class="externalLink" href="http://maven.apache.org">edu.pdx.cs410J.whitlock:phonebill</a></li>
+<li><a class="externalLink" href="http://www.cs.pdx.edu">edu.pdx.cs410J.whitlock:student</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>org.hamcrest:hamcrest-core<a name="org.hamcrest:hamcrest-core"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">1.3</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://maven.apache.org">edu.pdx.cs410J.whitlock:phonebill</a></li>
+<li><a class="externalLink" href="http://www.cs.pdx.edu">edu.pdx.cs410J.whitlock:student</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>org.hamcrest:hamcrest-library<a name="org.hamcrest:hamcrest-library"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">1.3</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://maven.apache.org">edu.pdx.cs410J.whitlock:phonebill</a></li></ol></td></tr></table></td></tr></table></div>
+<div class="section">
+<h4>org.mockito:mockito-all<a name="org.mockito:mockito-all"></a></h4>
+<table border="0" class="bodyTable">
+<tr class="a">
+<td><img alt="success" src="images/icon_success_sml.gif" /></td>
+<td>
+<table border="0" class="bodyTable">
+<tr class="b">
+<td width="25%">1.9.5</td>
+<td>
+<ol style="list-style-type: lower-alpha">
+<li><a class="externalLink" href="http://maven.apache.org">edu.pdx.cs410J.whitlock:phonebill</a></li></ol></td></tr></table></td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
