--- a/pmd.html
+++ b/pmd.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <title>CS410J Phone Bill Project - PMD Results</title>
+    <title>student - PMD Results</title>
     <style type="text/css" media="all">
       @import url("./css/maven-base.css");
       @import url("./css/maven-theme.css");
@@ -17,7 +17,7 @@
   <body class="composite">
     <div id="banner">
                     <div id="bannerLeft">
-                CS410J Phone Bill Project
+                student
                 </div>
                     <div class="clear">
         <hr/>
@@ -30,7 +30,7 @@
         <span id="publishDate">Last Published: 2016-05-19</span>
                   &nbsp;| <span id="projectVersion">Version: 1.0-SNAPSHOT</span>
                       </div>
-            <div class="xright">                    <a href="./" title="CS410J Phone Bill Project">CS410J Phone Bill Project</a>
+            <div class="xright">                    <a href="./" title="student">student</a>
               
                     
       </div>
@@ -50,10 +50,10 @@
           </ul>
                        <h5>Project Documentation</h5>
                   <ul>
-                                                                                                                                                                                                                                      <li class="collapsed">
+                                                                                                                                                                                                                                                                                                              <li class="collapsed">
                           <a href="project-info.html" title="Project Information">Project Information</a>
                   </li>
-                                                                                                                                                                                          <li class="expanded">
+                                                                                                                                                                        <li class="expanded">
                           <a href="project-reports.html" title="Project Reports">Project Reports</a>
                     <ul>
                       <li class="none">
@@ -72,11 +72,8 @@
                           <a href="checkstyle.html" title="Checkstyle">Checkstyle</a>
             </li>
                       <li class="none">
-            <strong>PMD Report</strong>
+            <strong>PMD</strong>
           </li>
-                      <li class="none">
-                          <a href="cpd.html" title="CPD Report">CPD Report</a>
-            </li>
               </ul>
         </li>
           </ul>
@@ -91,99 +88,21 @@
       <div id="contentBox">
         <div class="section">
 <h2>PMD Results<a name="PMD_Results"></a></h2>
-<p>The following document contains the results of <a class="externalLink" href="http://pmd.sourceforge.net/">PMD</a> 4.3.</p></div>
+<p>The following document contains the results of <a class="externalLink" href="http://pmd.sourceforge.net/">PMD</a> 5.0.5.</p></div>
 <div class="section">
 <h2>Files<a name="Files"></a></h2>
 <div class="section">
-<h3>edu/pdx/cs410J/minesweeper/GameState.java<a name="edupdxcs410JminesweeperGameState.java"></a></h3>
+<h3>edu/pdx/cs410J/whitlock/Student.java<a name="edupdxcs410JwhitlockStudent.java"></a></h3>
 <table border="0" class="bodyTable">
 <tr class="a">
 <th>Violation</th>
 <th>Line</th></tr>
 <tr class="b">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/GameState.java: Can't use static imports when running in JDK 1.4 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/GameState.html#0">0</a></td></tr>
+<td>Avoid unused constructor parameters such as 'gender'.</td>
+<td><a href="./xref/edu/pdx/cs410J/whitlock/Student.html#L30">30</a></td></tr>
 <tr class="a">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/GameState.java: Can't use static imports when running in JDK 1.4 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/GameState.html#0">0</a></td></tr>
-<tr class="b">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/GameState.java: Can't use static imports when running in JDK 1.4 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/GameState.html#0">0</a></td></tr></table></div>
-<div class="section">
-<h3>edu/pdx/cs410J/minesweeper/MineField.java<a name="edupdxcs410JminesweeperMineField.java"></a></h3>
-<table border="0" class="bodyTable">
-<tr class="a">
-<th>Violation</th>
-<th>Line</th></tr>
-<tr class="b">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MineField.java: Can't use generics unless running in JDK 1.5 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/MineField.html#0">0</a></td></tr>
-<tr class="a">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MineField.java: Can't use generics unless running in JDK 1.5 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/MineField.html#0">0</a></td></tr>
-<tr class="b">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MineField.java: Can't use generics unless running in JDK 1.5 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/MineField.html#0">0</a></td></tr></table></div>
-<div class="section">
-<h3>edu/pdx/cs410J/minesweeper/MineFieldWithHints.java<a name="edupdxcs410JminesweeperMineFieldWithHints.java"></a></h3>
-<table border="0" class="bodyTable">
-<tr class="a">
-<th>Violation</th>
-<th>Line</th></tr>
-<tr class="b">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MineFieldWithHints.java: Can't use generics unless running in JDK 1.5 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/MineFieldWithHints.html#0">0</a></td></tr>
-<tr class="a">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MineFieldWithHints.java: Can't use generics unless running in JDK 1.5 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/MineFieldWithHints.html#0">0</a></td></tr>
-<tr class="b">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MineFieldWithHints.java: Can't use generics unless running in JDK 1.5 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/MineFieldWithHints.html#0">0</a></td></tr></table></div>
-<div class="section">
-<h3>edu/pdx/cs410J/minesweeper/MinesweeperGame.java<a name="edupdxcs410JminesweeperMinesweeperGame.java"></a></h3>
-<table border="0" class="bodyTable">
-<tr class="a">
-<th>Violation</th>
-<th>Line</th></tr>
-<tr class="b">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MinesweeperGame.java: Can't use static imports when running in JDK 1.4 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/MinesweeperGame.html#0">0</a></td></tr>
-<tr class="a">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MinesweeperGame.java: Can't use static imports when running in JDK 1.4 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/MinesweeperGame.html#0">0</a></td></tr>
-<tr class="b">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MinesweeperGame.java: Can't use static imports when running in JDK 1.4 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/MinesweeperGame.html#0">0</a></td></tr></table></div>
-<div class="section">
-<h3>edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.java<a name="edupdxcs410JminesweeperMinesweeperGameMainProgram.java"></a></h3>
-<table border="0" class="bodyTable">
-<tr class="a">
-<th>Violation</th>
-<th>Line</th></tr>
-<tr class="b">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.java: Can't use generics unless running in JDK 1.5 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.html#0">0</a></td></tr>
-<tr class="a">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.java: Can't use generics unless running in JDK 1.5 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.html#0">0</a></td></tr>
-<tr class="b">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.java: Can't use generics unless running in JDK 1.5 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/MinesweeperGameMainProgram.html#0">0</a></td></tr></table></div>
-<div class="section">
-<h3>edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.java<a name="edupdxcs410JminesweeperRandomMinesweeperGameGenerator.java"></a></h3>
-<table border="0" class="bodyTable">
-<tr class="a">
-<th>Violation</th>
-<th>Line</th></tr>
-<tr class="b">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.java: Can't use annotations when running in JDK 1.4 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.html#0">0</a></td></tr>
-<tr class="a">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.java: Can't use annotations when running in JDK 1.4 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.html#0">0</a></td></tr>
-<tr class="b">
-<td>Error while parsing /Users/david/PSU/git/PortlandStateJavaSummer2015/minesweeper-kata/src/main/java/edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.java: Can't use annotations when running in JDK 1.4 mode!</td>
-<td><a href="./xref/edu/pdx/cs410J/minesweeper/RandomMinesweeperGameGenerator.html#0">0</a></td></tr></table></div></div>
+<td>Avoid unused local variables such as 'gpa'.</td>
+<td><a href="./xref/edu/pdx/cs410J/whitlock/Student.html#L89">89</a></td></tr></table></div></div>
       </div>
     </div>
     <div class="clear">
